--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@supabase/supabase-js": "^2.21.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.11.1",
+    "react-socks": "^2.2.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
